--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,7 +1,103 @@
 ---
 title: "Quickstart"
-description: "Start building awesome documentation in minutes"
+description: "Get your WayPay account, API key, and make your first API call"
 ---
+
+## Create your WayPay account
+
+To use the WayPay Merchant APIs, first create an account:
+
+- Go to: https://waypay-dev-web.icydesert-41d42f7e.uaenorth.azurecontainerapps.io
+- Click Sign Up and complete the registration form.
+- Verify your email address.
+- Provide required business details for compliance review.
+- Wait for approval. You’ll be notified once your account is active.
+
+<Note>
+  Your API access becomes available only after your account is approved and active.
+</Note>
+
+## Get your API key
+
+Once approved:
+- Sign in to the portal.
+- Locate your API key in the dashboard.
+- Copy it securely. Never commit keys to source control.
+
+All API requests must include this header:
+- Swich-API-Key: YOUR_API_KEY
+
+<Warning>
+  Treat your API key like a password. Rotate it immediately if exposed.
+</Warning>
+
+## Make your first API call
+
+Set your key in the terminal:
+
+```bash
+export SWICH_API_KEY="sk_live_XXXX"
+```
+
+Create a hosted checkout payment intent:
+
+```bash
+curl -X POST "https://api.swich.com/Gateway/v1/Payment/initiate" \
+  -H "Content-Type: application/json" \
+  -H "Swich-API-Key: $SWICH_API_KEY" \
+  -d '{
+    "amountMinor": 50000,
+    "currency": "PKR",
+    "description": "Order 12345",
+    "orderRef": { "orderRef": "ORD12345" },
+    "successUrl": "https://merchant.example.com/checkout/success",
+    "cancelUrl": "https://merchant.example.com/checkout/cancel"
+  }'
+```
+
+You should receive a response with `paymentIntentId` and `checkoutUrl`.
+
+### Charge a tokenized mobile wallet (optional)
+
+```bash
+curl -X POST "https://api.swich.com/Gateway/v1/Payment/charge-mobile-wallet" \
+  -H "Content-Type: application/json" \
+  -H "Swich-API-Key: $SWICH_API_KEY" \
+  -d '{
+    "token": "tok_mwallet_9xK3PQrA",
+    "mobileNumber": "+923001234567",
+    "amount": 1500.0,
+    "billReference": "INV-98127",
+    "description": "Wallet charge for order ORD-98127",
+    "last6CNICDigits": "123456"
+  }'
+```
+
+### Issue a refund (optional)
+
+```bash
+curl -X POST "https://api.swich.com/Gateway/v1/Refunds" \
+  -H "Content-Type: application/json" \
+  -H "Swich-API-Key: $SWICH_API_KEY" \
+  -d '{
+    "trxnRef": "trx_7ZP8X2",
+    "amount": 500.0,
+    "reason": "Customer returned the item"
+  }'
+```
+
+## Troubleshooting
+
+- 401 Unauthorized  
+  Ensure the header is present and correct:
+  -H "Swich-API-Key: $SWICH_API_KEY"
+
+- 400 Validation error  
+  Check your payload fields and formats (e.g., description length and characters).
+
+<Note>
+  See the full API reference and schema at <code>/docs/api-reference/openapi.json</code>, and endpoint examples under API Reference → Endpoints.
+</Note>
 
 ## Get started in three steps
 
@@ -11,14 +107,14 @@ Get your documentation site running locally and make your first customization.
 
 <AccordionGroup>
   <Accordion icon="copy" title="Clone your docs locally">
-    During the onboarding process, you created a GitHub repository with your docs content if you didn't already have one. You can find a link to this repository in your [dashboard](https://dashboard.mintlify.com).
+    During the onboarding process, you created a GitHub repository with your docs content if you didn't already have one. You can find a link to this repository in your dashboard.
     
-    To clone the repository locally so that you can make and preview changes to your docs, follow the [Cloning a repository](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository) guide in the GitHub docs.
+    To clone the repository locally so that you can make and preview changes to your docs, follow the Cloning a repository guide in the GitHub docs.
   </Accordion>
   <Accordion icon="rectangle-terminal" title="Start the preview server">
-    1. Install the Mintlify CLI: `npm i -g mint`
-    2. Navigate to your docs directory and run: `mint dev`
-    3. Open `http://localhost:3000` to see your docs live!
+    1. Install the Mintlify CLI: <code>npm i -g mint</code>
+    2. Navigate to your docs directory and run: <code>mint dev</code>
+    3. Open <code>http://localhost:3000</code> to see your docs live!
     
     <Tip>Your preview updates automatically as you edit files.</Tip>
   </Accordion>
@@ -28,17 +124,17 @@ Get your documentation site running locally and make your first customization.
 
 <AccordionGroup>
   <Accordion icon="github" title="Install our GitHub app">
-    Install the Mintlify GitHub app from your [dashboard](https://dashboard.mintlify.com/settings/organization/github-app).
+    Install the Mintlify GitHub app from your dashboard.
     
     Our GitHub app automatically deploys your changes to your docs site, so you don't need to manage deployments yourself.
-</Accordion>
-<Accordion icon="palette" title="Update your site name and colors">
+  </Accordion>
+  <Accordion icon="palette" title="Update your site name and colors">
     For a first change, let's update the name and colors of your docs site.
 
-    1. Open `docs.json` in your editor.
-    2. Change the `"name"` field to your project name.
-    3. Update the `"colors"` to match your brand.
-    4. Save and see your changes instantly at `http://localhost:3000`.
+    1. Open <code>docs.json</code> in your editor.
+    2. Change the <code>"name"</code> field to your project name.
+    3. Update the <code>"colors"</code> to match your brand.
+    4. Save and see your changes instantly at <code>http://localhost:3000</code>.
 
     <Tip>Try changing the primary color to see an immediate difference!</Tip>
   </Accordion>
@@ -53,9 +149,11 @@ Get your documentation site running locally and make your first customization.
 
 ## Next steps
 
-Now that you have your docs running, explore these key features:
-
 <CardGroup cols={2}>
+
+<Card title="API reference" icon="code" href="/api-reference/introduction">
+  Explore endpoints, payloads, and examples powered by OpenAPI.
+</Card>
 
 <Card title="Write Content" icon="pen-to-square" href="/essentials/markdown">
   Learn MDX syntax and start writing your documentation.
@@ -69,12 +167,7 @@ Now that you have your docs running, explore these key features:
   Include syntax-highlighted code blocks.
 </Card>
 
-<Card title="API documentation" icon="code" href="/api-reference/introduction">
-  Auto-generate API docs from OpenAPI specs.
-</Card>
-
 </CardGroup>
 
 <Note>
-  **Need help?** See our [full documentation](https://mintlify.com/docs) or join our [community](https://mintlify.com/community).
-</Note>
+  Need help? See the Mintlify docs or join the community.
