--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -8,21 +8,22 @@ description: "Get your WayPay account, API key, and make your first API call"
 To use the WayPay Merchant APIs, first create an account:
 
 - Go to: https://waypay-dev-web.icydesert-41d42f7e.uaenorth.azurecontainerapps.io
-- Click Sign Up and complete the registration form.
-- Verify your email address.
-- Provide required business details for compliance review.
-- Wait for approval. You’ll be notified once your account is active.
+- Click Sign Up and complete the registration form (business name, contact, email, phone).
+- Verify your email address via the link sent to your inbox.
+- Provide required business details and documents for compliance (KYC/KYB).
+- Submit for review and wait for approval. You’ll be notified once your account is active.
 
 <Note>
-  Your API access becomes available only after your account is approved and active.
+  Your API access becomes available only after your account is approved and active. Approval timelines vary based on compliance review completeness.
 </Note>
 
 ## Get your API key
 
 Once approved:
-- Sign in to the portal.
+- Sign in to the merchant portal.
 - Locate your API key in the dashboard.
 - Copy it securely. Never commit keys to source control.
+- Use separate keys per environment and rotate them periodically.
 
 All API requests must include this header:
 - Swich-API-Key: YOUR_API_KEY
@@ -42,7 +43,7 @@ export SWICH_API_KEY="sk_live_XXXX"
 Create a hosted checkout payment intent:
 
 ```bash
-curl -X POST "https://api.swich.com/Gateway/v1/Payment/initiate" \
+curl -X POST "https://waypay-merchant-api.icydesert-41d42f7e.uaenorth.azurecontainerapps.io/Gateway/v1/Payment/initiate" \
   -H "Content-Type: application/json" \
   -H "Swich-API-Key: $SWICH_API_KEY" \
   -d '{
@@ -60,7 +61,7 @@ You should receive a response with `paymentIntentId` and `checkoutUrl`.
 ### Charge a tokenized mobile wallet (optional)
 
 ```bash
-curl -X POST "https://api.swich.com/Gateway/v1/Payment/charge-mobile-wallet" \
+curl -X POST "https://waypay-merchant-api.icydesert-41d42f7e.uaenorth.azurecontainerapps.io/Gateway/v1/Payment/charge-mobile-wallet" \
   -H "Content-Type: application/json" \
   -H "Swich-API-Key: $SWICH_API_KEY" \
   -d '{
@@ -76,7 +77,7 @@ curl -X POST "https://api.swich.com/Gateway/v1/Payment/charge-mobile-wallet" \
 ### Issue a refund (optional)
 
 ```bash
-curl -X POST "https://api.swich.com/Gateway/v1/Refunds" \
+curl -X POST "https://waypay-merchant-api.icydesert-41d42f7e.uaenorth.azurecontainerapps.io/Gateway/v1/Refunds" \
   -H "Content-Type: application/json" \
   -H "Swich-API-Key: $SWICH_API_KEY" \
   -d '{
