--- a/api-reference/authentication.mdx
+++ b/api-reference/authentication.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Authentication"
+title: "API Authentication"
 description: "Use your Merchant API key with the Swich-API-Key header"
 ---
 
