--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,77 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: "WayPay Merchant API"
+description: "Integrate payments, mobile wallets, and refunds with the WayPay Gateway"
 ---
 
-## Setting up
+## Get started
 
-Get your documentation site up and running in minutes.
+Launch your integration quickly.
 
-<Card
-  title="Start here"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
-  Follow our three step quickstart guide.
+<Card title="Quickstart" icon="rocket" href="/quickstart" horizontal>
+  Create your account, get approved, obtain your API key, and make your first
+  API call.
 </Card>
 
-## Make it yours
+## Build with WayPay
 
-Design a docs site that looks great and empowers your users.
+Essential references for integrating the Merchant API.
 
 <Columns cols={2}>
   <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
-  >
-    Edit your docs locally and preview them in real time.
-  </Card>
-  <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
-    Customize the design and colors of your site to match your brand.
-  </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
-  <Card
-    title="API documentation"
+    title="API reference"
     icon="terminal"
     href="/api-reference/introduction"
   >
-    Auto-generate API documentation from OpenAPI specifications.
+    Explore endpoints, schemas, and examples powered by OpenAPI.
+  </Card>
+  <Card title="Authentication" icon="key" href="/api-reference/authentication">
+    Send your Merchant API key using the Swich-API-Key header.
+  </Card>
+  <Card
+    title="Initiate payment"
+    icon="credit-card"
+    href="/api-reference/endpoints/payment-initiate"
+  >
+    Create a hosted checkout payment intent and get a checkoutUrl.
+  </Card>
+  <Card
+    title="Charge mobile wallet"
+    icon="mobile"
+    href="/api-reference/endpoints/charge-mobile-wallet"
+  >
+    Charge a tokenized mobile wallet with OTP flows.
+  </Card>
+  <Card
+    title="Create refund"
+    icon="rotate-left"
+    href="/api-reference/endpoints/refund-create"
+  >
+    Issue full or partial refunds for previous transactions.
+  </Card>
+  <Card
+    title="Cancel refund"
+    icon="ban"
+    href="/api-reference/endpoints/refund-cancel"
+  >
+    Attempt to cancel a pending refund.
   </Card>
 </Columns>
 
-## Create beautiful pages
+## Create beautiful docs
 
-Everything you need to create world-class documentation.
+Everything you need to create helpful documentation for your team and users.
 
 <Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
+  <Card title="Write with MDX" icon="pen-fancy" href="/essentials/markdown">
+    Use MDX to compose and style your docs.
   </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
+  <Card title="Code samples" icon="code" href="/essentials/code">
+    Add language-specific examples to accelerate integration.
   </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
+  <Card title="Customize your site" icon="palette" href="/essentials/settings">
+    Configure design and colors to match your brand.
   </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
+  <Card title="Navigation" icon="map" href="/essentials/navigation">
+    Organize pages so users can find what they need fast.
   </Card>
 </Columns>
-
-## Need inspiration?
-
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
-  Browse our showcase of exceptional documentation sites.
-</Card>
