--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -172,3 +172,4 @@ Get your documentation site running locally and make your first customization.
 
 <Note>
   Need help? See the Mintlify docs or join the community.
+</Note>
