waypay name update

--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,15 +1,15 @@
 ---
 title: 'Introduction'
-description: 'Swich Gateway API overview and usage guide'
+description: 'Waypay Gateway API overview and usage guide'
 ---
 
 <Note>
-  This section documents the Swich Gateway API using the bundled OpenAPI spec.
+  This section documents the Waypay Gateway API using the bundled OpenAPI spec.
 </Note>
 
 ## Overview
 
-The Swich Gateway lets merchants:
+The Waypay Gateway lets merchants:
 - Initiate hosted checkout payment intents
 - Charge tokenized mobile wallets
 - Create and manage refunds
