fixed API param

--- a/api-reference/authentication.mdx
+++ b/api-reference/authentication.mdx
@@ -25,7 +25,7 @@ curl -X POST "https://waypay-merchant-api.icydesert-41d42f7e.uaenorth.azureconta
   -H "Content-Type: application/json" \
   -H "Swich-API-Key: $SWICH_API_KEY" \
   -d '{
-    "amountMinor": 50000,
+    "amount": 50000,
     "currency": "PKR",
     "description": "Order 12345",
     "orderRef": { "orderRef": "ORD12345" }
@@ -44,7 +44,7 @@ const res = await fetch("https://waypay-merchant-api.icydesert-41d42f7e.uaenorth
     "Swich-API-Key": process.env.SWICH_API_KEY
   },
   body: JSON.stringify({
-    amountMinor: 50000,
+    amount: 50000,
     currency: "PKR",
     description: "Order 12345",
     orderRef: { orderRef: "ORD12345" }
@@ -63,7 +63,7 @@ api_key = os.getenv("SWICH_API_KEY")
 url = "https://waypay-merchant-api.icydesert-41d42f7e.uaenorth.azurecontainerapps.io/Gateway/v1/Payment/initiate"
 headers = {"Swich-API-Key": api_key, "Content-Type": "application/json"}
 payload = {
-  "amountMinor": 50000,
+  "amount": 50000,
   "currency": "PKR",
   "description": "Order 12345",
   "orderRef": { "orderRef": "ORD12345" }
