--- a/api-reference/endpoints/payment-initiate.mdx
+++ b/api-reference/endpoints/payment-initiate.mdx
@@ -13,7 +13,7 @@ description: 'Create a hosted checkout payment intent'
 
 ```json
 {
-  "amountMinor": 50000,
+  "amount": 50000,
   "currency": "PKR",
   "description": "Order 12345",
   "customerRef": {
