--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -47,7 +47,7 @@ curl -X POST "https://waypay-merchant-api.icydesert-41d42f7e.uaenorth.azureconta
   -H "Content-Type: application/json" \
   -H "Swich-API-Key: $SWICH_API_KEY" \
   -d '{
-    "amountMinor": 50000,
+    "amount": 50000,
     "currency": "PKR",
     "description": "Order 12345",
     "orderRef": { "orderRef": "ORD12345" },
