--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -36,7 +36,7 @@ curl -X POST "https://api.swich.com/Gateway/v1/Payment/initiate" \
   -H "Content-Type: application/json" \
   -H "Swich-API-Key: $SWICH_API_KEY" \
   -d '{
-    "amountMinor": 50000,
+    "amount": 50000,
     "currency": "PKR",
     "description": "Order 12345",
     "orderRef": { "orderRef": "ORD12345" },
