--- a/api-reference/endpoints/payment-initiate.mdx
+++ b/api-reference/endpoints/payment-initiate.mdx
@@ -33,7 +33,7 @@ description: 'Create a hosted checkout payment intent'
 ```json
 {
   "paymentIntentId": "2c4b7c5a-f7a6-4f2d-a8b9-9b1b2c3d4e5f",
-  "checkoutUrl": "https://pay.swich.com/checkout/2c4b7c5a-f7a6-4f2d-a8b9-9b1b2c3d4e5f",
+  "checkoutUrl": "https://pay.swich.com/checkout?token=2c4b7c5a-f7a6-4f2d-a8b9-9b1b2c3d4e5f",
   "expiresAt": "2025-11-15T12:00:00Z"
 }
 ```
