--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -32,7 +32,7 @@ Webhooks – (reserved for future events)
 ```bash
 export SWICH_API_KEY="sk_live_XXXX"
 
-curl -X POST "https://api.swich.com/Gateway/v1/Payment/initiate" \
+curl -X POST "https://waypay-merchant-api.icydesert-41d42f7e.uaenorth.azurecontainerapps.io/Gateway/v1/Payment/initiate" \
   -H "Content-Type: application/json" \
   -H "Swich-API-Key: $SWICH_API_KEY" \
   -d '{
